Fix Missing time and counting of bottom player on mobile #678

--- a/static/site.css
+++ b/static/site.css
@@ -1412,11 +1412,11 @@ button:disabled {
 }
 @media (max-width: 799px) and (orientation: portrait) {
     .info-wrap0 {
-        grid-area: 3 / 1 / 3 / 2;
+        grid-area: 4 / 1 / 4 / 2;
         justify-self: flex-end;
     }
     .info-wrap1  {
-        grid-area: 7 / 1 / 7 / 2;
+        grid-area: 8 / 1 / 8 / 2;
         justify-self: flex-end;
     }
 }
